@@ -8,6 +8,8 @@
     statistic <- as.numeric(tmp$estimate)
     variant <- tmp$method
     if (permutations) {
+        if (permutations %% 100 == 0)
+            permutatoins <- permutations - 1
         N <- attributes(xdis)$Size
         perm <- rep(0, permutations)
         for (i in 1:permutations) {
